# TrailCurrentPlateau

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
CAD/: TrailCurrentPlateauForDiyPcbMilling.FCStd
CAD/CNC/: PlateauPcbMilling-TC__0_6mm_Drill-3.nc  PlateauPcbMilling-TC__0_6mm_Drill001-2.nc  PlateauPcbMilling-TC__1mm_Drill.nc  PlateauPcbMilling-TC__1mm_Drill001.nc  PlateauPcbMilling-TC__2_5mm_Drillbit-1.nc  PlateauPcbMilling-TC__2_5mm_Drillbit001-1.nc  PlateauPcbMilling-TC__SpeTool_O_Flute_1_4_-2.nc  PlateauPcbMilling-TC__SpeTool_O_Flute_1_4_001-3.nc
EDA/TrailCurrentPlateau/: TrailCurrentPlateau.kicad_pcb  TrailCurrentPlateau.kicad_prl  TrailCurrentPlateau.kicad_pro  TrailCurrentPlateau.kicad_sch  drc_report.json  erc_report.json
main/: CMakeLists.txt  bno055.c  bno055.h  discovery.c  discovery.h  main.c  ota.c  ota.h  wifi_config.c
src/: Globals.h  Main.cpp  wifiConfig.h
